# dance

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docusaurus.config.js  gputest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
dance/: __init__.py  dance.py  losses.py  matcher.py  metrics.py  utils.py
dance/cli/: helpers.py  main.py
dance/configs/: __init__.py  defaults.yaml
dance/configs/datasets/: korczowski2014a.yaml  korczowski2014b.yaml  shah2018.yaml  tangermann2012.yaml
dance/ecg/: __init__.py  _batching.py  adapters.py  benchmark.py  classifier.py  cpsc2021_score.py  data.py  evaluation.py  rhythm_data.py  training.py  validation.py
dance/ecg/datasets/: __init__.py  cpsc2021.py  ludb.py
dance/ecg/events/: __init__.py  schema.py
dance/ecg/metrics/: __init__.py  rhythm.py  wave.py
dance/example/: data.py  train.py
dance/models/: __init__.py  decoder.py  encoder.py  perceiver.py
dance/tests/: conftest.py  test_dance.py  test_data.py  test_ecg.py  test_extractors.py  test_losses.py  test_matcher.py  test_metrics.py  test_model.py  test_splitters.py
dance/training/: callbacks.py  data.py  extractors.py  grid.py  main.py  pl_module.py  splitters.py  transforms.py  warm_cache.py
docs/: Adapting-DANCE-from-EEG-to-ECG..md  engineering-plan.md  open-decisions.md
docs/artifacts/: cpsc2021-classifier-baseline.md  cpsc2021-data-contract.md  cpsc2021-sampling.md  cpsc2021-training-entrypoint.md  ecg-cli-entrypoint.md  ecg-compatibility-boundary.md  ecg-e2e-training.md  ecg-evaluation-surface.md  ecg-event-schema.md  ecg-training-entrypoint.md  ludb-data-contract.md
scripts/ecg/: train_cpsc2021_e2e.sh  train_ludb_e2e.sh
skills/engineering-plan-ontology/: SKILL.md
